# backend/controllers/Category.js
@@ -47,7 +47,7 @@ const Categorycontroller = {
         #swagger.autoBody = false
         #swagger.consumes = ['multipart/form-data']
         #swagger.parameters['picture'] = { in: 'formData', type: 'file', required: true,description: 'Category picture', accept: 'image/jpeg, image/png'},
-        #swagger.parameters['name'] = { in: 'formData', type: 'string', required: true, enum: ['Electronics', 'Mobile','Fashion', 'Home & Furniture', 'Appliances', 'Beauty & Personal Care', 'Sports & Fitness', 'Books', 'Grocery', 'Toys & Baby Products', 'Automotive']},
+        #swagger.parameters['name'] = { in: 'formData', type: 'string', required: true, enum: ['Electronics', 'Fashion', 'Home & Furniture', 'Appliances', 'Beauty & Personal Care', 'Sports & Fitness', 'Books', 'Grocery', 'Toys & Baby Products',]},
        */
     },
 
