# backend/models/Category.js
@@ -4,7 +4,7 @@ const CategorySchema = mongoose.Schema(
     {
         name: {
             type: String,
-            enum: ['Electronics', 'Mobile', 'Fashion', 'Home & Furniture', 'Appliances', 'Beauty & Personal Care', 'Sports & Fitness', 'Books', 'Grocery', 'Toys & Baby Products', 'Automotive'],
+            enum: ['Electronics', 'Fashion', 'Home & Furniture', 'Appliances', 'Beauty & Personal Care', 'Sports & Fitness', 'Books', 'Grocery', 'Toys & Baby Products',],
             required: true, // Makes the name field mandatory
             trim: true, // Trims whitespace from the input
         },
